# LLACA

./: .gitignore  LLACA.py  README.md  TrieGram.py  __init__.py  demo.py  setup.cfg  setup.py  test.py
automaton/: __init__.py  automaton.cpp  automaton.pyx  setup.cfg  setup.py
automaton/src/: automaton.cpp  automaton.h  test.cpp
data/dict/: as_dict.utf8  best_dict.utf8  cityu_dict.utf8  ctb_dict.utf8  kwdlc_dict.utf8  msr_dict.utf8  pku_dict.utf8  ud_ja_dict.utf8
data/gold/: best_test_gold.utf8  ctb_test_gold.utf8  demo_test_gold.utf8  kwdlc_test_gold.utf8  ud_ja_test_gold.utf8  ud_ko_test_gold.utf8  ud_th_test_gold.utf8
data/test/: best_test.utf8  ctb_test.utf8  demo_test.utf8  kwdlc_test.utf8  ud_ja_test.utf8  ud_ko_test.utf8  ud_th_test.utf8
scripts/: score
suffix_array/: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  setup.cfg  setup.py  suffix_array.cpp  suffix_array.pyx
suffix_array/src/: suffix_array.cpp  suffix_array.h
utils/: __init__.py  benchmark.py  common.py  dict_utils.py
