[metadata]
name = LLACA
version = 0.1.0
author = Zihong Zhang
description = LLACA: Large Language Models-Inspired Aho-Corasick Automaton
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
py_modules = 
    LLACA
    TrieGram
python_requires = >=3.7
include_package_data = True
install_requires = 
    numpy
    tqdm
    regex
    openai

[options.package_data]
* =
    *.pxd
    *.pyx
    *.cpp
    *.h
